@@ -24,7 +24,7 @@ class Activity < ActiveRecord::Base
   named_scope :except, lambda { |*actions| { :conditions => "action NOT IN (#{actions.join("','").wrap("'")})" } }
   named_scope :latest, lambda { |options|  {
     :conditions => [ "#{options[:asset] ? "subject_type = ?" : "0=?"} AND #{options[:user] ? "user_id = ?" : "0=?"} AND activities.created_at >= ?",
-      options[:asset] || 0, options[:user] || 0, Time.now - (options[:duration] || 2.weeks) ],
+      options[:asset] || 0, options[:user] || 0, Time.now - (options[:duration] || 1.week) ],
     :include => :user,
     :order => "activities.created_at DESC"
   } }
