@@ -2,26 +2,95 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 
 describe HomeController do
 
-  it "should assign @hello and call hook" do
-    require_user
-    controller.should_receive(:hook).at_least(:once)
+  # GET /
+  #----------------------------------------------------------------------------
+  describe "responding to GET /" do
+    before(:each) do
+      require_user
+    end
 
-    get :index
-    assigns[:hello] = "world"
+    it "should get a list of activities" do
+      @activity = Factory(:activity, :subject => Factory(:account, :user => @current_user))
+      controller.should_receive(:get_activities).once.and_return([ @activity ])
+  
+      get :index
+      assigns[:activities].should == [ @activity ]
+    end
+
+    it "should assign @hello and call hook" do
+      require_user
+      controller.should_receive(:hook).at_least(:once)
+
+      get :index
+      assigns[:hello].should == "Hello world"
+    end
   end
 
-  it "should toggle expand/collapse state of form section in the session (delete existing session key)" do
-    session[:hello] = "world"
+  # GET /home/options                                                      AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to GET toggle" do
+    before(:each) do
+      require_user
+    end
 
-    xhr :get, :toggle, :id => "hello"
-    session.data.keys.should_not include(:hello)
+    it "should assign instance variables for user preferences" do
+      @asset = Factory(:preference, :user => @current_user, :name => "activity_asset", :value => Base64.encode64(Marshal.dump("tasks")))
+      @user = Factory(:preference, :user => @current_user, :name => "activity_user", :value => Base64.encode64(Marshal.dump("Billy Bones")))
+      @duration = Factory(:preference, :user => @current_user, :name => "activity_duration", :value => Base64.encode64(Marshal.dump("two days")))
+
+      xhr :get, :options
+      assigns[:asset].should == "tasks"
+      assigns[:user].should == "Billy Bones"
+      assigns[:duration].should == "two days"
+    end
+
+    it "should not assign instance variables when hiding options" do
+      xhr :get, :options, :cancel => "true"
+      assigns[:asset].should == nil
+      assigns[:user].should == nil
+      assigns[:duration].should == nil
+    end
   end
 
-  it "should toggle expand/collapse state of form section in the session (save new session key)" do
-    session.data.delete(:hello)
+  # POST /home/redraw                                                      AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to POST redraw" do
+    before(:each) do
+      require_user
+    end
 
-    xhr :get, :toggle, :id => "hello"
-    session[:hello] = "world"
+    it "should save user selected options" do
+      xhr :post, :redraw, :asset => "tasks", :user => "Billy Bones", :duration => "two days"
+      @current_user.pref[:activity_asset].should == "tasks"
+      @current_user.pref[:activity_user].should == "Billy Bones"
+      @current_user.pref[:activity_duration].should == "two days"
+    end
+
+    it "should get a list of activities" do
+      @activity = Factory(:activity, :subject => Factory(:account, :user => @current_user))
+      controller.should_receive(:get_activities).once.and_return([ @activity ])
+
+      get :index
+      assigns[:activities].should == [ @activity ]
+    end
+  end
+
+  # GET /home/toggle                                                       AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to GET toggle" do
+    it "should toggle expand/collapse state of form section in the session (delete existing session key)" do
+      session[:hello] = "world"
+
+      xhr :get, :toggle, :id => "hello"
+      session.data.keys.should_not include(:hello)
+    end
+
+    it "should toggle expand/collapse state of form section in the session (save new session key)" do
+      session.data.delete(:hello)
+
+      xhr :get, :toggle, :id => "hello"
+      session[:hello].should == true
+    end
   end
 
 end
